--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Обо мне</title>
+  <base href="%BASE_URL%" />
 </head>
 
 <body>
